# 206A-warehouse-sorting-MPC

./: .gitignore  README.md  pyproject.toml
config/: system_config.yaml
docs/: DETAILED_GUIDE.md
scripts/: collect_mpc_data.py  demo_comparison.py  evaluate_imitator.py  train_imitator.py
sim/: main.py
sim/models/: cube.xml  scene.xml
src/: __init__.py
src/control/: __init__.py  mpc_controller.py
src/learning/: __init__.py  mpc_imitator.py
src/perception/: __init__.py  sim_state.py
