[project]
name = "warehouse-sorting-mpc"
version = "0.1.0"
description = "206A project: vision and MPC for warehouse-style object sorting"
requires-python = ">=3.12"
dependencies = [
    # Simulation
    "mujoco==3.3.6",
    "loop-rate-limiters==1.2.0",
    
    # Core scientific computing
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    
    # Optimization (for MPC)
    "casadi>=3.6.0",
    
    # Machine Learning (for imitation learning)
    "torch>=2.0.0",
    "matplotlib>=3.7.0",
    
    # Configuration and utilities
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Hardware dependencies (for lab computer with RealSense camera)
hardware = [
    "pyrealsense2>=2.54.0; platform_system == 'Linux' or platform_system == 'Windows'",
    "opencv-python>=4.8.0",
]

# Vision dependencies (YOLO for object detection)
vision = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

